# BuildTest_Repo

./: CMakeLists.txt  buildTest.sln  buildTest.vcxproj
.github/workflows/: ci.yml
buildTest/: buildTest.vcxproj
